--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "active-model",
-  "version": "0.0.1",
-  "description": "Active Models for node.js",
+  "version": "0.0.3",
+  "description": "Data source agnostic opinionated models for Node.js with classic inheritance, basic validations and a clean API",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha -w test/"
@@ -14,6 +14,7 @@
     "model",
     "inherit",
     "extend",
+    "augment",
     "object",
     "validation",
     "active"
